Fixed some minor issue. Now worldgenoverride.lua.tmpl follows latest format.

--- a/rootfs/game/DoNotStarveTogether/Cluster_1/Master/server.ini
+++ b/rootfs/game/DoNotStarveTogether/Cluster_1/Master/server.ini
@@ -5,6 +5,6 @@ server_port = 10999
 [SHARD]
 is_master = true
 
-
-[ACCOUNT]
-encode_user_path = true
+[STEAM]
+master_server_port = 27018
+authentication_port = 8768
