ci: update settings for the repo

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,6 +1,7 @@
+---
 repository:
   name: dst
-  description: Docker images for Don't Starve Together
+  description: Docker images for dst
   topics: docker, image
 
   private: false
