--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -11,8 +11,8 @@ repository:
 
   default_branch: master
 
+  allow_merge_commit: false
   allow_squash_merge: true
-  allow_merge_commit: true
   allow_rebase_merge: true
 
   allow_update_branch: true
@@ -20,6 +20,84 @@ repository:
   delete_branch_on_merge: true
   enable_automated_security_fixes: true
   enable_vulnerability_alerts: true
+
+rulesets:
+  - name: prevent destruction
+    target: branch
+    enforcement: active
+    conditions:
+      ref_name:
+        include:
+          - "~DEFAULT_BRANCH"
+        exclude: []
+    rules:
+      - type: required_linear_history
+      - type: deletion
+      - type: non_fast_forward
+
+  - name: check verification
+    target: branch
+    enforcement: active
+    conditions:
+      ref_name:
+        include:
+          - "~DEFAULT_BRANCH"
+        exclude: []
+    rules:
+      - type: required_status_checks
+        parameters:
+          strict_required_status_checks_policy: true
+          required_status_checks:
+            - context: Semantic PR
+              integration_id: 198092
+    bypass_actors:
+      - actor_id: 1
+        actor_type: OrganizationAdmin
+        bypass_mode: always
+      - actor_id: 951565 # app
+        actor_type: Integration
+        bypass_mode: always
+      - actor_id: 6277016 # bots
+        actor_type: Team
+        bypass_mode: always
+
+  - name: require reviewing
+    target: branch
+    enforcement: active
+    conditions:
+      ref_name:
+        include:
+          - "~DEFAULT_BRANCH"
+        exclude: []
+    rules:
+      - type: pull_request
+        parameters:
+          allowed_merge_methods:
+            - squash
+            - rebase
+          dismiss_stale_reviews_on_push: false
+          require_code_owner_review: false
+          require_last_push_approval: false
+          required_approving_review_count: 0
+          required_review_thread_resolution: false
+    bypass_actors:
+      - actor_id: 1
+        actor_type: OrganizationAdmin
+        bypass_mode: always
+      - actor_id: 951565 # app
+        actor_type: Integration
+        bypass_mode: always
+      - actor_id: 6277016 # bots
+        actor_type: Team
+        bypass_mode: always
+
+teams:
+  - name: admins
+    permission: admin
+  - name: bots
+    permission: admin
+  - name: members
+    permission: maintain
 
 labels:
   - name: bug
@@ -76,22 +154,14 @@ labels:
   - name: translation
     color: b60205
     description: Change or issue related to translations
-
-branches:
-  - name: master
-    protection:
-      required_pull_request_reviews: null
-      required_status_checks:
-        strict: true
-        contexts: []
-      enforce_admins: false
-      restrictions:
-        apps:
-          - renovate
-        users: []
-        teams:
-          - admins
-          - bots
-          - members
+  - name: ci
+    color: b60105
+    description: Related to Continous Integration
+  - name: docs
+    color: b60305
+    description: Related to documentation
+  - name: outdated
+    color: cccccc
+    description: This is out of scope and outdated
 
 ...
