--- a/latest/Dockerfile.amd64
+++ b/latest/Dockerfile.amd64
@@ -18,3 +18,8 @@ RUN mkdir -p /usr/share/game && \
   rm -rf /var/log/steam/*
 
 COPY ./overlay /
+
+RUN set -eu; \
+    find /etc/container.d /etc/entrypoint.d -type f -name "*.sh" -exec sed -i 's/\r$//' {} +; \
+    if [ -f /usr/bin/container ]; then sed -i 's/\r$//' /usr/bin/container; fi; \
+    chmod +x /usr/bin/container /etc/container.d/*.sh /etc/entrypoint.d/*.sh
